# cad

./: CMakeLists.txt  README.md
include/cad/: cad.hpp
include/cad/auxil/container/: container.hpp
include/cad/color/: color.h
include/cad/core/base/: base.hpp  base_cad_obj.hpp  cad_obj.h  cad_obj.hpp  cad_object.hpp  handler.h  named_object.hpp
include/cad/core/block/: block.h
include/cad/core/class/: class.h
include/cad/core/database/: database.h
include/cad/core/database/containers/: blocks.h  classes.h  containers.hpp  named_container.h  objects.h  tables.h  variables.h
include/cad/core/entities/: base_entity.h  base_enty.hpp  entities.hpp  line.h  point.h
include/cad/core/entity/: base_entity.h  entities.hpp  line.h  point.h  unknown.h
include/cad/core/object/: object.h
include/cad/core/table/: appid.h  dimstyle.h  layer.h  linetype.h  style.h  table_object.h  table_record.h  tables.hpp  ucs.h  view.h  vport.h
include/cad/core/tables/: layer.h  table_object.h  tables.hpp
include/cad/core/variable/: variable.h
include/cad/core/variables/: variable.h
include/cad/enums/: enums.hpp
include/cad/errors/: errors.h
include/cad/string/: string.h
include/cad/types/: types.hpp
include/cad/util/container/: container.hpp
include/cad/util/defines/: defines.hpp
include/cad/util/var_values/: var_values.h
src/auxil/handle_maker/: handle_maker.hpp
src/color/: color.cpp
src/core/base/: cad_obj.cpp  handler.cpp
src/core/block/: block.cpp
src/core/class/: class.cpp
src/core/database/: database.cpp
src/core/database/containers/: blocks.cpp  classes.cpp  named_container.cpp  variables.cpp
src/core/database/initializer/: initializer.cpp  initializer.h
src/core/entities/: base_entity.cpp  line.cpp  point.cpp
src/core/entity/: base_entity.cpp  line.cpp  point.cpp  unknown.cpp
src/core/object/: object.cpp
src/core/table/: appid.cpp  dimstyle.cpp  layer.cpp  linetype.cpp  style.cpp  table_object.cpp  table_record.cpp  ucs.cpp  view.cpp  vport.cpp
src/core/tables/: table_object.cpp
src/core/variable/: variable.cpp
src/core/variables/: variable.cpp
src/dxf_translator/: base_dxf_translator.hpp  dxf_base_translator.hpp  dxf_reader.cpp  dxf_reader.h  dxf_writer.cpp  dxf_writer.h
src/errors/: errors.cpp
src/string/: string.cpp  string_converter.hpp
src/translator/: base_dxf_translator.hpp  dxf_reader.cpp  dxf_reader.h  dxf_writer.cpp  dxf_writer.h  translator.hpp  util.cpp  util.h
src/translator/io/: dxf_input.cpp  dxf_input.h  dxf_output.cpp  dxf_output.h
src/util/handle_maker/: handle_maker.hpp
src/util/var_values/: var_values.cpp
